--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,12 @@
 	font-family: "Montserrat", sans-serif;
 }
 
+a {
+	text-decoration: none !important;
+}
+ul {
+	list-style: none !important;
+}
 h1 {
 	margin-top: 1.5rem;
 }
@@ -36,4 +42,8 @@ h4 {
 	width: 100%;
 	/* align-items: center; */
 	justify-content: flex-start;
+}
+
+i.fa {
+	line-height: inherit;
 }
