--- a/src/css/components.css
+++ b/src/css/components.css
@@ -52,3 +52,28 @@ nav {
 .input:focus {
     outline: none;
 }
+
+
+
+/* Login box */
+
+.loginBox {
+    margin-top: 20%;
+    margin-left: 10%;
+    width: 450px;
+    height: 430px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    -webkit-box-shadow: 0px 6px 15px -2px rgba(0,0,0,0.45); 
+    box-shadow: 0px 3px 10px -2px rgba(0,0,0,0.35);
+}
+
+.login-tabs{
+    flex-grow:10;
+}
+
+.skills-tab{
+    column-span: 6;
+    flex-grow:10;
+    text-align: center;
+}
