--- a/src/css/index.css
+++ b/src/css/index.css
@@ -47,3 +47,13 @@ h4 {
 i.fa {
 	line-height: inherit;
 }
+.icon {
+	padding: 15px;
+	color: rgb(49, 0, 128);
+	width: 70px;
+	text-align: left;
+ }
+ .inputContainer i {
+	 position: absolute;
+	 transform: translateX(-40px);
+ }
