--- a/src/css/components.css
+++ b/src/css/components.css
@@ -88,6 +88,8 @@ nav {
     border-radius: 1rem;
     position: absolute;
     overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
     padding: 0;
     transform: translateY(-7px);
     transition: max-height .3s ease-out;
@@ -98,13 +100,17 @@ nav {
     border-radius: 1rem;
     position: absolute;
     overflow-y: scroll;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
     padding: 0;
     transform: translateY(-7px);
     max-height: 200px;
-    /* overflow: hidden; */
     transition: max-height .3s ease-in;
 }
 .dd-list::-webkit-scrollbar {
+    display: none;
+}
+.dd-list-active::-webkit-scrollbar {
     display: none;
 }
 .dd-item {
