--- a/src/css/components.css
+++ b/src/css/components.css
@@ -88,6 +88,8 @@ nav {
     border-radius: 1rem;
     position: absolute;
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
     padding: 0;
     transform: translateY(-7px);
     transition: max-height .3s ease-out;
@@ -98,6 +100,8 @@ nav {
     border-radius: 1rem;
     position: absolute;
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
     padding: 0;
     transform: translateY(-7px);
     max-height: 200px;
@@ -105,6 +109,9 @@ nav {
     transition: max-height .3s ease-in;
 }
 .dd-list::-webkit-scrollbar {
+    display: none;
+}
+.dd-list-active::-webkit-scrollbar {
     display: none;
 }
 .dd-item {
