--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,7 @@
 
 :root {
 	--dark-blue: rgb(30, 61, 107);
+	--light-blue: rgb(72, 123, 189);
 	--off-white: rgb(246, 248, 248);
 	--grey: rgb(215, 221, 226);
 }
