--- a/src/css/components.css
+++ b/src/css/components.css
@@ -55,30 +55,6 @@ nav {
     outline: none;
 }
 
-
-
-/* Login box */
-
-.loginBox {
-    margin-top: 20%;
-    margin-left: 10%;
-    width: 450px;
-    height: 430px;
-    background-color: #FFFFFF;
-    border-radius: 8px;
-    -webkit-box-shadow: 0px 6px 15px -2px rgba(0,0,0,0.45); 
-    box-shadow: 0px 3px 10px -2px rgba(0,0,0,0.35);
-}
-
-.login-tabs{
-    flex-grow:10;
-}
-
-.skills-tab{
-    column-span: 6;
-    flex-grow:10;
-    text-align: center;
-}
 /* Dropdown CSS */
 .dd-wrapper {
     width: 200px;
@@ -126,3 +102,69 @@ nav {
 .dd-item:hover {
     background-color: rgba(30, 61, 107, 0.1);
 }
+
+
+
+/* Login box */
+
+.login-box {
+    width: 500px;
+    background-color: white;
+    border-radius: 2rem;
+    padding: 2rem;
+    border: 2px solid var(--dark-blue);
+}
+.user-slider {
+    height: 2rem;
+    background-color: var(--light-blue);
+    padding: 1.75rem;
+    color: white;
+    font: 18pt bold;
+    border-radius: 1.8rem;
+    width: 100%;
+    cursor: pointer;
+    margin: 0.5rem 0;
+}
+.login-item {
+    margin-top: 0;
+    margin-bottom: 0.6rem !important;
+}
+.users {
+    position: absolute;
+    z-index: 10;
+    font-weight: 500;
+    cursor: pointer;
+}
+.gpd {
+    margin-left: 3rem;
+}
+.student {
+    margin-left: 9rem;
+}
+.gpd-selected {
+    position: absolute;
+    background-color: var(--dark-blue);
+    width: calc((500px - 4rem) / 2);
+    height: 3.5rem;
+    border-radius: 1.8rem;
+    cursor: pointer;
+    text-align: center;
+    line-height: 3.5rem;
+    transform: translateX(-2rem);
+    transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.student-selected {
+    position: absolute;
+    background-color: var(--dark-blue);
+    width: calc((500px - 4rem) / 2);
+    height: 3.5rem;
+    border-radius: 1.8rem;
+    cursor: pointer;
+    text-align: center;
+    line-height: 3.5rem;
+    transform: translateX(calc((500px - 8rem) / 2));
+    transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+
+
