--- a/src/css/components.css
+++ b/src/css/components.css
@@ -3,7 +3,7 @@
 /* Navbar CSS */
 nav {
     height: 3.5rem;
-    background-color: var(--dark-blue) !important;
+    background-color: var(--charcoal) !important;
 }
 
 .nav-link, .navbar-brand {
@@ -24,12 +24,12 @@ nav {
     font-size: 16px;
     padding: 7px 10px;
     margin: 7px auto;
-    border: 2px solid var(--dark-blue);
+    border: 2px solid var(--charcoal);
     border-radius: 2rem;
     width: 100%;
 }
 .round-button {
-    background-color: var(--dark-blue);
+    background-color: var(--charcoal);
     color: white;
     align-items: center;
     justify-content: center;
@@ -42,11 +42,11 @@ nav {
     font-size: 16px;
     padding: 7px 10px;
     margin: 7px auto;
-    border: 2px solid var(--dark-blue);
+    border: 2px solid var(--charcoal);
     border-radius: 0.5rem;
     width: 100%;
     background-color: white;
-    color: var(--dark-blue);
+    color: var(--charcoal);
 }
 .input {
     background: rgba(255, 255, 255, 0.3);
@@ -57,70 +57,55 @@ nav {
 
 /* Dropdown CSS */
 .dd-wrapper {
-    width: 200px;
+    min-width: 200px;
+    width: fit-content;
+    max-width: 350px;
+    margin-bottom: 0.4rem;
 }
-.dd-list {
-    background-color: white;
-    border-radius: 1rem;
-    position: absolute;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none; 
-    padding: 0;
-    transform: translateY(-7px);
-    transition: max-height .3s ease-out;
-    max-height: 0;
-}
-.dd-list-active {
-    background-color: white;
-    border-radius: 1rem;
-    position: absolute;
-    overflow-y: scroll;
-    -ms-overflow-style: none; 
-    scrollbar-width: none;
-    padding: 0;
-    transform: translateY(-7px);
-    max-height: 200px;
-    transition: max-height .3s ease-in;
-}
-.dd-list::-webkit-scrollbar {
-    display: none;
-}
-.dd-list-active::-webkit-scrollbar {
-    display: none;
-}
-.dd-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1rem;
-    transition: background 0.5s;
-    padding: 0.5rem;
-    color: var(--dark-blue);
-    width: 200px;
-}
-.dd-item:hover {
-    background-color: rgba(30, 61, 107, 0.1);
-}
-
 
 
 /* Login box */
-
+.login-box-top {
+    height: 20vh;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translate3d(-2rem, -2rem, 0);
+    border-top-right-radius: 2rem;
+    border-top-left-radius: 2rem;
+    margin-bottom: -1rem;
+    background: rgba(0, 0, 0, .4) url(https://theaeac.org/wp-content/uploads/2019/09/stony-brook-1024x405.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: darken;
+}
+.welcome, .landing-title {
+    color: white;
+    text-align: center;
+}
+.welcome {
+    font-size: 35pt;
+    font-weight: 900;
+}
+.landing-title {
+    font-size: 20pt;
+    font-weight: 400;
+}
 .login-box {
     width: 500px;
     background-color: white;
     border-radius: 2rem;
     padding: 2rem;
-    border: 2px solid var(--dark-blue);
 }
 .user-slider {
     height: 2rem;
-    background-color: var(--light-blue);
-    padding: 1.75rem;
+    background-color: var(--dark-grey);
+    padding: 1.5rem;
     color: white;
     font: 18pt bold;
-    border-radius: 1.8rem;
+    border-radius: 1.5rem;
     width: 100%;
     cursor: pointer;
     margin: 0.5rem 0;
@@ -143,28 +128,33 @@ nav {
 }
 .gpd-selected {
     position: absolute;
-    background-color: var(--dark-blue);
-    width: calc((500px - 4rem) / 2);
-    height: 3.5rem;
-    border-radius: 1.8rem;
+    background-color: var(--charcoal);
+    width: calc((500px - 3rem) / 2);
+    height: 3rem;
+    border-radius: 1.5rem;
     cursor: pointer;
     text-align: center;
-    line-height: 3.5rem;
-    transform: translateX(-2rem);
+    line-height: 3rem;
+    transform: translateX(-1.5rem);
     transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 .student-selected {
     position: absolute;
-    background-color: var(--dark-blue);
-    width: calc((500px - 4rem) / 2);
-    height: 3.5rem;
-    border-radius: 1.8rem;
+    background-color: var(--charcoal);
+    width: calc((500px - 3rem) / 2);
+    height: 3rem;
+    border-radius: 1.5rem;
     cursor: pointer;
     text-align: center;
-    line-height: 3.5rem;
+    line-height: 3rem;
     transform: translateX(calc((500px - 8rem) / 2));
     transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 
-
+/* Extras */
+.checkmark {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
