--- a/src/css/components.css
+++ b/src/css/components.css
@@ -181,6 +181,12 @@ nav {
 
 .checkmark {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 47%;
+  top: 47%;
+}
+
+.loading {
+  position: absolute;
+  left: 47%;
+  top: 47%;
 }
