--- a/src/css/index.css
+++ b/src/css/index.css
@@ -66,6 +66,10 @@ footer {
   justify-content: flex-start;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 .error {
   color: #a8201a;
 }
@@ -74,16 +78,20 @@ footer {
   margin: 0 auto;
 }
 
+
 i.fa {
-  line-height: inherit;
+  line-height: 3.4rem; 
+  float: right;
+  color: var(--charcoal);
+  margin-right: 0;
 }
 
-.icon {
+/* .icon {
   padding: 15px;
   color: rgb(49, 0, 128);
   width: 70px;
   text-align: left;
-}
+} */
 
 .inputContainer i {
   position: absolute;
@@ -136,6 +144,3 @@ i.fa {
   border-radius: 10px;
 }
 
-.student_box{
-  width:100%
-}
