--- a/src/css/components.css
+++ b/src/css/components.css
@@ -5,13 +5,9 @@ nav {
   background-color: var(--charcoal) !important;
 }
 
-.nav-link, .navbar-brand {
-  color: white !important;
+.navbar-dark .navbar-nav .nav-link, .navbar-brand {
+  color: white;
   margin: 0 0.7rem;
-}
-
-.navbar-brand {
-  margin-left: 5vw;
 }
 
 .toggler {
@@ -20,10 +16,9 @@ nav {
 
 /* Buttons and Input CSS */
 
-.input, .round-button {
-  font-size: 16px;
-  padding: 7px 10px;
-  margin: 7px auto;
+.input, .round-button, .square-button {
+  padding: 5px 10px;
+  margin: 4px auto;
   border: 2px solid var(--charcoal);
   border-radius: 0.5rem;
   width: 100%;
@@ -42,18 +37,12 @@ nav {
 }
 
 .square-button {
-  font-size: 16px;
-  padding: 7px 10px;
-  margin: 7px auto;
-  border: 2px solid var(--charcoal);
-  border-radius: 0.5rem;
-  width: 100%;
   background-color: white;
   color: var(--charcoal);
 }
 
 .input {
-  background: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.95);
 }
 
 .input:focus {
@@ -66,114 +55,12 @@ nav {
   min-width: 200px;
   width: fit-content;
   max-width: 400px;
-  margin-bottom: 0.4rem;
+  margin: 4px auto;
 }
 .dd-wrapper-single {
   min-width: 120px;
   width: fit-content;
-  max-width: 140px;
-  margin-bottom: 0.4rem;
-}
-
-/* Login box */
-
-.login-box-top {
-  height: 20%;
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transform: translate3d(-2rem, -2rem, 0);
-  border-top-right-radius: 2rem;
-  border-top-left-radius: 2rem;
-  margin-bottom: -1rem;
-  background: rgba(0, 0, 0, .4) url(https://theaeac.org/wp-content/uploads/2019/09/stony-brook-1024x405.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-blend-mode: darken;
-}
-
-.welcome, .landing-title {
-  color: white;
-  text-align: center;
-}
-
-.welcome {
-  font-size: 35pt;
-  font-weight: 900;
-}
-
-.landing-title {
-  font-size: 20pt;
-  font-weight: 400;
-}
-
-.login-box {
-  width: 500px;
-  background-color: white;
-  border-radius: 2rem;
-  padding: 2rem;
-}
-
-.user-slider {
-  height: 2rem;
-  background-color: var(--dark-grey);
-  padding: 1.5rem;
-  color: white;
-  font: 18pt bold;
-  border-radius: 1.5rem;
-  width: 100%;
-  cursor: pointer;
-  margin: 0.5rem 0;
-}
-
-.login-item {
-  margin-top: 0;
-  margin-bottom: 0.4rem !important;
-  text-align: center;
-  font-weight: 800;
-}
-
-.users {
-  position: absolute;
-  z-index: 10;
-  font-weight: 500;
-  cursor: pointer;
-}
-
-.gpd {
-  margin-left: 3rem;
-}
-
-.student {
-  margin-left: 9rem;
-}
-
-.gpd-selected {
-  position: absolute;
-  background-color: var(--charcoal);
-  width: calc((500px - 3rem) / 2);
-  height: 3rem;
-  border-radius: 1.5rem;
-  cursor: pointer;
-  text-align: center;
-  line-height: 3rem;
-  transform: translateX(-1.5rem);
-  transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.student-selected {
-  position: absolute;
-  background-color: var(--charcoal);
-  width: calc((500px - 3rem) / 2);
-  height: 3rem;
-  border-radius: 1.5rem;
-  cursor: pointer;
-  text-align: center;
-  line-height: 3rem;
-  transform: translateX(calc((500px - 8rem) / 2));
-  transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  margin: 4px auto;
 }
 
 
@@ -182,7 +69,6 @@ nav {
   /* padding-top: 1.2rem; */
   background-color: transparent;
   border: none;
-  font-size: 14px;
   width: fit-content;
 }
 
@@ -191,16 +77,18 @@ nav {
 }
 
 .advancedFilters{
-  /* height: auto; */
+  height: auto;
   /* padding: 0.5rem 1rem; */
   /* background-color:red; */
 }
+
 .filter-span {
-  width: 100px;
+  width: 82px;
+  font-size: 12px !important;
 }
 .filter-component {
-  width: 200px;
-  margin-right: 3rem;
+  width: 150px;
+  margin-right: 1.5rem;
 }
 
 .studentTable {
