--- a/src/css/components.css
+++ b/src/css/components.css
@@ -17,7 +17,7 @@ nav {
 
 /* Buttons and Input CSS */
 
-.input, .round-button, .square-button {
+.input, .round-button, .square-button, textarea {
   padding: 5px 10px;
   margin: 4px auto;
   border: 2px solid var(--charcoal);
@@ -42,11 +42,11 @@ nav {
   color: var(--charcoal);
 }
 
-.input {
+.input, textarea {
   background-color: rgba(255, 255, 255, 0.95);
 }
 
-.input:focus {
+.input:focus, textarea:focus {
   outline: none;
 }
 
