course plan component start

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -51,7 +51,7 @@ footer {
 /* Table styling CSS */
 table {
   margin-bottom: 0.5rem;
-  display: block;
+  /* display: block; */
 }
 th {
   border: none;
