--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,11 +2,13 @@
 :root {
   --slate-black: #2F323A;
   --charcoal: #344055;
-  --dark-blue: rgb(30, 61, 107);
-  --light-blue: rgb(72, 123, 189);
+  --dark-blue: #223E6E;
+  --dark-blue-70o: rgba(34, 62, 110, 0.7);
+  --light-blue: #91B3ED;
+  --med-blue: #325AA1;
   --off-white: rgb(246, 248, 248);
   --grey: rgb(215, 221, 226);
-  --dark-grey: #727A88;
+  --dark-grey: #6279A1;
 }
 
 * {
@@ -33,7 +35,7 @@ h1 {
 
 h3 {
   font-size: 24px;
-  border-bottom: 2px solid #2f323ac4;
+  border-bottom: 2px solid var(--dark-blue-70o);
 }
 
 h4 {
@@ -60,7 +62,7 @@ table {
 }
 th {
   border: none;
-  background-color: #1e345acb;
+  background-color: var(--dark-blue-70o);
   color: white;
   padding: 0.5rem;
   text-align: center;
