--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -4,7 +4,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  background-color: var(--charcoal);
+  background-color: #232946;
   z-index: -1;
 }
 
@@ -26,24 +26,25 @@
 /* Login box */
 
 .login-box-top {
-  height: 20%;
-  width: 500px;
+  height: 250px;
+  width: calc(100% + 6rem);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transform: translate3d(-2rem, -2rem, 0);
-  border-top-right-radius: 2rem;
-  border-top-left-radius: 2rem;
-  margin-bottom: -1rem;
-  background: rgba(0, 0, 0, .4) url(https://theaeac.org/wp-content/uploads/2019/09/stony-brook-1024x405.jpg) no-repeat;
+  transform: translate(-3rem, -4rem);
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  margin-bottom: -2.5rem;
+  background: rgba(0, 0, 0, .1) url(https://theaeac.org/wp-content/uploads/2019/09/stony-brook-1024x405.jpg) no-repeat;
   background-position: center;
-  background-size: cover;
-  background-blend-mode: darken;
+  opacity: 0.8;
+  /* background-size: cover;
+  background-blend-mode: darken; */
 }
 
 .welcome, .landing-title {
-  color: white;
+  color: var(--white);
   text-align: center;
 }
 
@@ -58,70 +59,72 @@
 }
 
 .login-box {
-  width: 500px;
-  background-color: white;
-  border-radius: 2rem;
-  padding: 2rem;
+  min-width: 50%;
+  max-width: 750px;
+  /* height: 40%; */
+  background-color: var(--white);
+  border-radius: 1rem;
+  padding: 4rem 3rem 3rem 3rem;
 }
 
 .user-slider {
-  height: 2rem;
-  background-color: var(--dark-grey);
-  padding: 1.5rem;
+  height: 3rem;
+  background-color: var(--secondary);
   color: white;
   font: 18pt bold;
   border-radius: 1.5rem;
   width: 100%;
   cursor: pointer;
-  margin: 1rem 0 0.5rem 0;
+  margin: 1rem 0;
 }
 
 .login-item {
   margin-top: 0;
-  margin-bottom: 0.3rem !important;
+  margin-bottom: 0.5rem !important;
   text-align: center;
   font-weight: 800;
 }
 
 .users {
-  position: absolute;
-  z-index: 10;
+  width: 100%;
+  z-index: 1;
   font-weight: 500;
+  height: 3rem;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .gpd {
-  margin-left: 4rem;
+  margin-left: 20%;
   font-size: 16pt;
+  transform: translate(0, -3rem);
 }
 
 .student {
-  margin-left: 10rem;
+  margin-left: 35%;
   font-size: 16pt;
+  transform: translate(0, -3rem);
 }
 
 .gpd-selected {
-  position: absolute;
-  background-color: var(--charcoal);
-  width: calc((500px - 3rem) / 2);
+  background-color: var(--primary);
+  width: calc((750px /2) - 4rem);
+  width: 50%;
   height: 3rem;
   border-radius: 1.5rem;
   cursor: pointer;
   text-align: center;
   line-height: 3rem;
-  transform: translateX(-1.5rem);
-  transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .student-selected {
-  position: absolute;
-  background-color: var(--charcoal);
-  width: calc((500px - 3rem) / 2);
+  background-color: var(--primary);
+  width: 50%;
   height: 3rem;
   border-radius: 1.5rem;
   cursor: pointer;
   text-align: center;
   line-height: 3rem;
-  transform: translateX(calc((500px - 8rem) / 2));
-  transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transform: translateX(100%);
 }
