--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -20,6 +20,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: "Montserrat", sans-serif;
   font-size: 15px;
 }
@@ -57,14 +58,14 @@ footer {
   height: 50px;
   padding: 10px;
   text-align: center;
-  color: white;
+  color: var(--primary);
 }
 
 
 /* Table styling CSS */
 table {
   margin-bottom: 0.5rem;
-  /* display: block; */
+  width: 100%;
 }
 th {
   border: none;
@@ -142,7 +143,11 @@ i.fa {
   margin-right: 0;
 }
 
-
+.container {
+  background-color: #fffffe;
+  min-height: calc(100vh - 4rem);
+  padding: 0 2rem;
+}
 
 .inputContainer i {
   position: absolute;
