added missing course plans and fixed req ver in student file

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -184,12 +184,15 @@ i.fa {
 }
 .green {
   background-color: #80FFC2;
+  margin-top: 2px;
 }
 .yellow {
   background-color: #FFF0A4;
+  margin-top: 2px;
 }
 .red {
   background-color: #FFAAAA;
+  margin-top: 2px;
 }
 
 
