--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,27 +1,4 @@
-.landing-background {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  /* background-color: #232946; */
-  z-index: -1;
-}
-
-.login-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.landing-svg svg {
-  position: absolute;
-  left: 0;
-  width:100vw;
-  height: 100vh;
-  z-index: -1;
-}
+/* Login CSS */
 
 hr.login-title {
   overflow: visible; /* For IE */
@@ -39,7 +16,6 @@ hr.login-title:after {
   padding: 0 1rem;
   background: white;
 }
-/* Login box */
 
 .login-box-top {
   position: relative;
@@ -137,4 +113,41 @@ hr.login-title:after {
 .student {
   border-top-right-radius: .5rem;
   border-bottom-right-radius: .5rem;
+}
+
+
+/* Background animation waves */
+.waves {
+  position:relative;
+  width: 100%;
+  height:15vh;
+  z-index: -1;
+}
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5) infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
 }
