--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -166,6 +166,20 @@ i.fa {
   border-radius: 0.5rem;
 }
 
+.overlay {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+
+
+
 /* Color CSS */
 .req-state {
   vertical-align: middle;
