fix degree and import course info

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -25,10 +25,6 @@
   font-size: 15px;
 }
 
-/* body {
-  overflow: hidden;
-} */
-
 /* Tag styling CSS */
 a {
   text-decoration: none !important;
@@ -173,8 +169,8 @@ i.fa {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.438);
+  z-index: 1;
   cursor: pointer;
 }
 
