--- a/client/src/css/components.css
+++ b/client/src/css/components.css
@@ -127,9 +127,11 @@ nav {
   position: absolute !important;
   top: calc(50% - 75px);
   left: calc(50% - 48px);
+  z-index: 2;
 }
 .loading {
   position: absolute !important;
   top: calc(50% - 50px);
   left: calc(50% - 60px);
+  z-index: 2;
 }
