show invalid students and course plan items in modal

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -171,7 +171,8 @@ i.fa {
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.438);
   z-index: 1;
-  cursor: pointer;
+  cursor: auto;
+  pointer-events: auto;
 }
 
 
