add status to cp table, fix pagination, and restore sorted browse

--- a/client/src/css/components.css
+++ b/client/src/css/components.css
@@ -56,6 +56,10 @@ nav {
   outline-width: 1px;
 }
 
+.bg-white {
+  background-color: white;
+  color: var(--primary);
+}
 /* Dropdown CSS */
 
 .dd-wrapper-multi {
