--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.css';
+
 :root {
   --slate-black: #2F323A;
   /*344055*/
@@ -61,9 +62,10 @@ footer {
 
 /* Table styling CSS */
 table {
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   width: 100%;
 }
+
 th {
   border: none;
   background-color: var(--light);
@@ -71,10 +73,12 @@ th {
   padding: 0.5rem;
   text-align: center;
 }
+
 td {
   padding: .2rem;
   border-bottom: 1px solid #ddd;
 }
+
 tr:hover {
   background-color: #727a8811;
 }
@@ -111,30 +115,35 @@ textarea {
 .wrap {
   flex-wrap: wrap;
 }
+
 .center {
   text-align: center;
 }
+
 .lr-padding {
   padding: 0 0.5rem 0 0.5rem;
 }
+
 .ud-padding {
   padding: 0.5rem 0 0.5rem 0;
 }
+
 .all-padding {
-  width:150px;
+  width: 150px;
   padding: 0.25rem 0.5rem;
 }
 
 .error {
   color: #a8201a;
 }
+
 .center-span {
   display: table;
   margin: 0 auto;
 }
 
 i.fa {
-  line-height: 3rem; 
+  line-height: 3rem;
   /* float: right; */
   color: rgba(52, 64, 85, 0.85);
   margin-right: 0;
@@ -183,6 +192,7 @@ i.fa {
   display: table-cell;
   padding-left: 0.5rem;
 }
+
 .color-box {
   width: 30px;
   height: 30px;
@@ -190,16 +200,19 @@ i.fa {
   vertical-align: middle;
   display: table-cell;
 }
+
 .green {
   background-color: #80FFC2;
   margin-top: 2px;
   padding: 0.1rem 0.3rem 0.1rem 0.7rem;
 }
+
 .yellow {
   background-color: #FFF0A4;
   margin-top: 2px;
   padding: 0.1rem 0.3rem 0.1rem 0.7rem;
 }
+
 .red {
   background-color: #FFAAAA;
   margin-top: 2px;
@@ -215,23 +228,28 @@ i.fa {
     background-color: var(--white);
     transform: translateY(1rem);
   }
+
   .navbar-dark .navbar-nav .nav-link {
     color: var(--primary) !important;
     margin-left: auto !important;
   }
 }
+
 @media (max-width: 1000px) {
-  .container{
+  .container {
     min-width: 98vw;
   }
+
   .textarea {
     width: calc(100vw - 6rem);
   }
 }
+
 @media (min-width: 1000px) and (max-width: 1200px) {
-  .container{
+  .container {
     min-width: 1000px;
   }
+
   .textarea {
     width: 905px;
   }
