--- a/client/src/css/components.css
+++ b/client/src/css/components.css
@@ -73,6 +73,17 @@ nav {
   margin: 4px auto;
 }
 
+.filler-text{
+  background-color: #fff6c9;
+  /* border: 1.5px solid var(--dark); */
+  border-radius: 7px;
+  width: 100%;
+  margin: 0.5rem 0;
+  margin-right: 0.5rem !important;
+  padding: 0.8rem 0;
+  text-align: center;
+}
+
 
 /* BrowseSearchbar */
 .advancedButton {
