--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -48,6 +48,10 @@ h4 {
   font-size: 20px;
 }
 
+h5 {
+  font-size: 17px;
+}
+
 footer {
   height: 20vh;
   padding: 15vh 0 0 0;
@@ -114,6 +118,10 @@ textarea {
 
 .center {
   text-align: center;
+}
+
+b {
+  font-size: inherit;
 }
 
 .lr-padding {
