--- a/client/src/css/components.css
+++ b/client/src/css/components.css
@@ -48,8 +48,11 @@ textarea {
 
 .round-button:disabled {
   cursor: not-allowed;
-  background-color: #e7e7e7d2 !important;
-  transition: none !important;
+  background: var(--white) !important;
+  color: var(--primary);
+  transition: background 0.4s, border-radius 1s;
+  border: 2px solid rgba(30, 61, 107, 0.95);
+  border-radius: 2rem;
 }
 
 .square-button {
