--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -118,8 +118,8 @@ textarea {
 
 .center {
   text-align: center;
-  line-height:22px;
-  vertical-align:middle;
+  line-height: 22px;
+  vertical-align: middle;
 }
 
 b {
@@ -141,6 +141,12 @@ b {
 
 .underline {
   border-bottom: 0.5px solid lightgrey;
+}
+
+.fit {
+  width: intrinsic;
+  width: -moz-max-content;
+  width: -webkit-max-content;
 }
 
 .error {
